--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "Fallacy detection",
   "version": "1.0.0",
   "author": "Pieter Delobelle <pieter.delobelle@gmail.com>",
-  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
@@ -12,7 +11,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.0.2"
   },
   "browserslist": [
     "> 1%",
